--- a/todo.org
+++ b/todo.org
@@ -1,21 +1,37 @@
 #+TITLE: get_the_nini/todo
 
 * _
-#+BEGIN_SRC markdown
-add `--format` which can `org`, `md` (or `markdown`), or `json`. default to `auto` which guesses based on provided output path extension. when no path provided, default to org.
-
-
+#+begin_verse
 include examples for all output formats in `examples/` for `https://www.ninisite.com/discussion/topic/11473285/`.
 
 Write readme.org which documents the project. link to examples.
+#+end_verse
+
+* @markdown
+** also add RTL isolate etc. in markdown output
+#+BEGIN_SRC markdown
+### پسرهستم؛ (1402/01/15, 2458 posts) [jalali:1403/07/04/08:06]
 #+END_SRC
 
-* _
+** _
+#+BEGIN_SRC markdown
+```
+::: {.post-message .topic-post__message .col-xs-12 .fr-view .m-b-1 .p-x-1}
+```
+remove these spam from markdown output
+#+END_SRC
+
+* DONE _
+#+BEGIN_SRC markdown
+add `--format` which can `org`, `md` (or `markdown`), or `json`. default to `auto` which guesses based on provided output path extension. when no path provided, default to org.
+#+END_SRC
+
+* DONE _
 #+BEGIN_SRC markdown
 in org output, replace `r"\\$"` linebreaks with `\n`.
 #+END_SRC
 
-* _
+* DONE _
 #+begin_verse
 ```
             output_file = f"ninisite_topic_{topic_id}.org"
@@ -23,13 +39,13 @@ in org output, replace `r"\\$"` linebreaks with `\n`.
 DRY for constructing output names. also change it to `"ninisite_{topic_id}.org"`.
 #+end_verse
 
-* scraping
+* _
 ** _
 #+BEGIN_SRC markdown
 Write a Python script that fetches all pages of a Niniesite post, in order and without duplication. Use pandoc to convert it to markdown. Include metadata such as user names etc. Here is an example url: `https://www.ninisite.com/discussion/topic/11473285/%DA%AF%D8%B1%D8%AF%D8%B4-%D8%AF%D8%B1-%D8%AA%D9%87%D8%B1%D8%A7%D9%86`. Test the script.
 #+END_SRC
 
-** _
+** DONE _
 #+BEGIN_SRC markdown
 Write a Python script that fetches all pages of a Niniesite post, in order and without duplication, and formats it in beautiful org-mode. You can use pandoc. Include metadata such as user names etc. Use org headings, property drawers, etc.
 
