html_to_org_mode: fixed bug

--- a/examples/ninisite_11473285.org
+++ b/examples/ninisite_11473285.org
@@ -2,7 +2,7 @@
 :PROPERTIES:
 :TOPIC_ID: 11473285
 :ORIGINAL_URL: https://www.ninisite.com/discussion/topic/11473285/
-:SCRAPE_DATE: jalali:1405/08/20/07:39
+:SCRAPE_DATE: jalali:1405/08/20/07:58
 :TOTAL_PAGES: 4
 :AUTHOR: negar_74
 :DATE: 7/4/2023 8:02:48 AM
@@ -89,7 +89,6 @@
 :END:
 دوست ادم خوب باشه
 جاش زیاد مهم نیست
-\
 
 **** Signature:
 ۳۸ ساله
@@ -219,7 +218,6 @@
 #+end_quote
 
 برو ولیعصر فعلا سینما برو یه فیلم ببین
-\
 
 **** Signature:
 ۳۸ ساله
@@ -255,7 +253,7 @@
 :END:
 من تهران نیستم ولی کاخها رو میتونید برید - موزه ها - کافه ها که تو خونه
 های قدیمی هستند . پاساژ گردی - پل طبیعت - کوه - بام لند - باغ های ایرانی
-که هم کافه دارند هم خوشگلند\
+که هم کافه دارند هم خوشگلند
 
 ** [[https://www.ninisite.com/discussion/topic/11473285/?page=2][2nd Page]]
 *** negar_74 (1401/06/16, 674 posts) [jalali:1403/07/04/08:07]
@@ -276,7 +274,6 @@
 #+end_quote
 
 با خانواده برو
-\
 
 *** sibزمینیkocholo (1402/01/28, 1226 posts) [jalali:1403/07/04/08:07]
 :PROPERTIES:
@@ -419,7 +416,7 @@
 پل طبیعت چطوره؟  با مترو میشه رفت؟
 #+end_quote
 
-نمیدونم تو نت بزن مسیرها و  متروهای نزدیکش رو احتمالا بهت بگه\
+نمیدونم تو نت بزن مسیرها و  متروهای نزدیکش رو احتمالا بهت بگه
 
 *** negar_74 (1401/06/16, 674 posts) [jalali:1403/07/04/08:09]
 :PROPERTIES:
@@ -516,7 +513,6 @@
 #+end_quote
 
 فقط طنز ببین
-\
 
 **** Signature:
 ۳۸ ساله
@@ -541,7 +537,6 @@
 وقتشو دارید؟؟
 با همین خانوم برید
 داخل شهر با مترو و بی ار تی راحتتره
-\
 
 **** Signature:
 ۳۸ ساله
@@ -564,7 +559,6 @@
 #+end_quote
 
 کآخ سعدآباد و موزها در عید غدیر رایگانه
-\
 
 **** Signature:
 ۳۸ ساله
@@ -582,7 +576,7 @@
 :END:
 یه موقعی تورهای تهرانگردی هم بود ببین اگر هست اونها هم خوبند بنظرم . من
 خودم دوست دارم یکبار این تورها رو امتحان کنم. یا قطار گردشگری یه موقعی
-بود از تهران میبرد سوادکوه . ظاهرا مسیر قطارش خوشگله\
+بود از تهران میبرد سوادکوه . ظاهرا مسیر قطارش خوشگله
 
 *** @likes/1 sibزمینیkocholo (1402/01/28, 1226 posts) [jalali:1403/07/04/08:18]
 :PROPERTIES:
@@ -621,7 +615,6 @@
 #+end_quote
 
 حتما برو
-\
 
 **** Signature:
 ۳۸ ساله
